# pycarot

./: .format.bat  .gitignore  LICENSE  README.md  pyproject.toml
examples/: event_example.py  ioc_example.py  progress_example.py
examples/ioc/: client.py  data_access.py  main.py
src/pycarot/: __init__.py  event.py  progress.py
src/pycarot/ioc/: __init__.py  container.py  entries.py  exceptions.py  static.py
src/tests/: test_event.py
