[build-system]
requires = ["setuptools>=42.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pycarot"
version = "0.0.1"
description = "pycarot - python tools"
readme = "README.md"
authors = [{ name = "BaySiyah", email = "siyah@ksknsy.de" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["dependency", "injection", "event", "IoC", "container"]
dependencies = []
requires-python = ">=3.6"

[project.urls]
Homepage = "https://github.com/BaySiyah/pycarot"

[project.scripts]
pycarot = "pycarot.__main__:main"

[tool.bumpver]
current_version = "0.0.1"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = false
tag = false
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"'
]
"src/pycarot/__init__.py" = [
    "{version}"
]
